plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'com.github.spotbugs' version '6.0.18'
}

group = 'com.example'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

application {
    mainClass = 'military.MilitaryMadness'
}

repositories { mavenCentral() }

dependencies {
    // No external runtime dependencies
    compileOnly 'org.jetbrains:annotations:24.0.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
}

checkstyle {
    toolVersion = '10.12.5'
    config = resources.text.fromFile('config/checkstyle/checkstyle.xml')
    ignoreFailures = true // keep CI green; SpotBugs will report too
}

tasks.withType(Checkstyle) {
    reports {
        html.required = true
        xml.required = false
    }
}

jacoco {
    toolVersion = '0.8.11'
}

test {
    useJUnit()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = true
        csv.required = false
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'BUNDLE'
            // Focus on engine/map logic; keep a modest threshold to avoid flakiness
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.05
            }
        }
    }
}

spotbugs {
    effort = 'max'
    reportLevel = 'low'
}

spotbugsMain {
    reports {
        html.required = true
        xml.required = false
    }
}


check.dependsOn jacocoTestCoverageVerification, spotbugsMain

sourceSets {
    main {
        java { srcDirs = ['src'] }
        resources { srcDirs = ['Resources', 'Maps', 'sounds'] }
    }
    test {
        java { srcDirs = ['test/java'] }
        resources { srcDirs = ['test/resources'] }
    }
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    from('Resources') { into 'Resources' }
    from('Maps') { into 'Maps' }
    from('sounds') { into 'sounds' }
}
